[workspace]
resolver = "2"
members = [
    "esri_json", "esri_json_macro",
#    "esri_json_py",
#    "esri_json_wasm",
    "esri_json_test_fixtures",
    "esri_json_tests",
]


[workspace.dependencies]
# main group
geo-traits = "0.3.0"
geo-types = { version = "0.7.18" }
geojson = "0.24.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

# optional
geo = { version = "0.32.0"}

# dev dependencies
rstest = "0.26.1"
