[package]
name = "esri_json"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
geo = "0.32.0"
geo-types = "0.7.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[dev-dependencies]
esri_json_test_fixtures = { path = "../esri_json_test_fixtures" }
