[package]
name = "esri_json"
description = "Serializing and Deserializing Esri JSON using serde"
repository = "https://github.com/cookiedan42/esri_json"
readme = "../README.md"
keywords = ["esri", "geo", "gis", "spatial"]
authors = ["Daniel Tan<Daniel@cookiedan42.com>"]

version = "0.1.1"
edition = "2024"
license = "Apache-2.0"

[features]
geo_types = ["dep:geo", "dep:geo-types"]


[dependencies]
geo = {version = "0.32.0", optional = true}
geo-types = {version = "0.7.18", optional = true}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[dev-dependencies]
esri_json_test_fixtures = { path = "../esri_json_test_fixtures" }
