[package]
name = "esri_json"
description = "Serializing and Deserializing Esri JSON using serde"
repository = "https://github.com/cookiedan42/esri_json"
readme = "../README.md"
keywords = ["esri", "geo", "gis", "spatial"]
authors = ["Daniel Tan<Daniel@cookiedan42.com>"]

version = "0.1.1"
edition = "2024"
license = "Apache-2.0"

[features]
geo_types = ["dep:geo"]


[dependencies]
geo = { workspace = true, optional = true }
geo-traits = {workspace = true}
geo-types={workspace = true}
geojson={workspace = true}
num-traits = "0.2.19"
serde = { workspace = true }
serde_json = {workspace=true}

[dev-dependencies]
esri_json_test_fixtures = { path = "../esri_json_test_fixtures" }
rstest = {workspace = true}
