[package]
name = "esri_json_py"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "esri_json_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["abi3-py312", "extension-module"] }
esri_json = {path = "../esri_json",features=["geo_types"]}
geo-types = "0.7.18"
geojson = "0.24.2"
wkt = "0.14.0"
serde_json = "1.0.149"

[build-dependencies]
pyo3-build-config = "0.27.2"

