[package]
name = "esri_json_tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
esri_json = {path = "../esri_json", features = ["geo_types"]}
geo-types ={workspace = true}
geojson = {workspace = true}
wkt = "0.14.0"
serde_json = {workspace = true}
serde = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}
